--- a/blocks/title/title.css
+++ b/blocks/title/title.css
@@ -1,6 +1,6 @@
 .title {
   display: flex;
-  font-family: 'Inter', Arial, sans-serif;
+  font-family: Inter;
   font-style: normal;
   font-weight: 900;
   color: #ffffff;
