--- a/blocks/block/__duration/block__duration.css
+++ b/blocks/block/__duration/block__duration.css
@@ -1,34 +1,40 @@
 .block__duration {
-  font-family: "Inter", Arial, sans-serif;
+  font-family: Inter;
   font-style: normal;
   font-weight: 500;
-  font-size: 0.75rem;
+  font-size: 0.75;
   line-height: 1;
   letter-spacing: 0.3em;
   color: #ffffff;
   margin-top: 94px;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 320px) {
   .block__duration {
-    margin-top: 54px;
+    margin-top: 49px;
   }
 }
 
-@media screen and (max-width: 1023px) {
-  .block__duration {
-    margin-top: 10px;
-  }
-}
-
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 321px) and (max-width: 375px) {
   .block__duration {
     margin-top: 41px;
   }
 }
 
-@media screen and (max-width: 374px) {
+@media screen and (min-width: 376px) and (max-width: 424px) {
   .block__duration {
-    margin-top: 30px;
+    margin-top: 41px;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .block__duration {
+    margin-top: 36px;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .block__duration {
+    margin-top: 54px;
   }
 }
