--- a/blocks/block/__item/_bg/block__item_bg_kamchatka.css
+++ b/blocks/block/__item/_bg/block__item_bg_kamchatka.css
@@ -23,9 +23,15 @@
     url(../../../../foto/kamchatka.jpg);
 }
 
-@media screen and (min-width: 425px) and (max-width: 768px) {
+@media screen and (max-width: 320px) {
   .block__item_bg_kamchatka {
-    padding: 24px;
+    padding: 16px;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .block__item_bg_kamchatka {
+    padding: 16px;
   }
 }
 
@@ -35,8 +41,40 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 425px) and (max-width: 768px) {
   .block__item_bg_kamchatka {
-    padding: 16px;
+    padding: 24px;
   }
 }
+
+/* background-image: url(../../../../foto/kamchatka.jpg);
+  border-radius: 5px;
+  max-width: 583px;
+  display: block;
+  text-decoration: none;
+  z-index: 1;
+  position: relative;
+  overflow: hidden;
+  opacity: 0;
+}
+
+.block__item_bg_kamchatka::before {
+  content: "";
+  display: block;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  border-radius: 5px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+.block__item_bg_kamchatka:hover::before {
+  background-color: rgba(0, 0, 0, 0.8);
+  transition: 0.1s linear;
+  z-index: 2;
+  border-radius: 5px;
+}
+*/
