--- a/blocks/block/block.css
+++ b/blocks/block/block.css
@@ -13,16 +13,20 @@
   grid-template-rows: 1fr;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 320px) {
   .block {
-    grid-gap: 16px;
+    grid-gap: 8px;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 321px) and (max-width: 375px) {
   .block {
     grid-gap: 8px;
-    grid-template-columns: repeat(1, minmax(288px, 460px));
-    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 424px) {
+  .block {
+    grid-gap: 8px;
   }
 }
