--- a/blocks/container/__image/container__image.css
+++ b/blocks/container/__image/container__image.css
@@ -1,41 +1,32 @@
-.container__image {
-  max-width: 97px;
-  height: auto;
-  background: #c4c4c4;
-  border-radius: 50px;
-}
-
-@media screen and (max-width: 1023px) {
-  .container__image {
-    margin: 0 auto;
-    order: 1;
-  }
+.container__image{
+   max-width: 97px;
+    height: auto;
+    background: #C4C4C4;
+    border-radius: 50px;
 }
 
 @media screen and (max-width: 320px) {
-  .container__image {
-    margin: 0 auto;
-    order: 1;
+    .container__image {
+      margin: 0 auto;
+    }
   }
-}
-
-@media screen and (min-width: 321px) and (max-width: 375px) {
-  .container__image {
-    margin: 0 auto;
-    order: 1;
+  
+  @media screen and (min-width: 321px) and (max-width: 375px) {
+    .container__image {
+        margin: 0 auto;
+    }
   }
-}
-
-@media screen and (min-width: 376px) and (max-width: 424px) {
-  .container__image {
-    margin: 0 auto;
-    order: 1;
+  
+  @media screen and (min-width: 376px) and (max-width: 424px) {
+    .container__image {
+        margin: 0 auto;
+    }
   }
-}
-
-@media screen and (min-width: 425px) and (max-width: 767px) {
-  .container__image {
-    margin: 0 auto;
-    order: 1;
+  
+  @media screen and (min-width: 425px) and (max-width: 768px) {
+    .container__image {
+        margin: 0 auto;
+    }
   }
-}
+  
+ 
