--- a/blocks/container/__quote-text/container__quote-text.css
+++ b/blocks/container/__quote-text/container__quote-text.css
@@ -4,39 +4,34 @@
   line-height: 1.7;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 320px) {
   .container__quote-text {
     font-size: 1rem;
     line-height: 1.7;
     margin-top: 24px;
-    order: 3;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .container__quote-text {
-    font-size: 1rem;
-    line-height: 1.4;
-    margin-top: 24px;
-    order: 3;
-    max-width: 288px;
   }
 }
 
 @media screen and (min-width: 321px) and (max-width: 375px) {
   .container__quote-text {
     font-size: 1rem;
-    line-height: 1.4;
+    line-height: 1.7;
     margin-top: 24px;
-    order: 3;
   }
 }
 
 @media screen and (min-width: 376px) and (max-width: 424px) {
   .container__quote-text {
     font-size: 1rem;
-    line-height: 1.5;
+    line-height: 1.7;
     margin-top: 24px;
-    order: 3;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .container__quote-text {
+    font-size: 1rem;
+    line-height: 1.7;
+    margin-top: 24px;
   }
 }
