--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,25 +1,17 @@
 .cover__subtitle {
   max-width: 382px;
-  margin: 121px auto 48px;
+  margin: 103px auto 0 auto;
   font-size: 1.125rem;
-  line-height: 1.4;
+  line-height: 1.44;
   text-align: center;
   z-index: 1;
   position: relative;
-}
-
-@media screen and (max-width: 1279px) {
-  .cover__subtitle {
-    margin-top: 84px;
-  }
 }
 
 @media screen and (max-width: 320px) {
   .cover__subtitle {
     font-size: 0.875rem;
     line-height: 1.44;
-    margin-top: 7px;
-    margin-bottom: 24px;
   }
 }
 
@@ -27,8 +19,6 @@
   .cover__subtitle {
     font-size: 0.875rem;
     line-height: 1.44;
-    margin-top: 7px;
-    margin-bottom: 24px;
   }
 }
 
@@ -36,12 +26,5 @@
   .cover__subtitle {
     font-size: 0.875rem;
     line-height: 1.44;
-  }
-}
-
-@media screen and (min-width: 425px) and (max-width: 769px) {
-  .cover__subtitle {
-    margin-top: 61px;
-    margin-bottom: 40px;
   }
 }
