--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,41 +1,32 @@
 .cover__title {
   max-width: 1094px;
-  line-height: 1;
+  line-height: 78px;
   font-size: 4.5rem;
   text-align: center;
-  margin: 296px auto 0 auto;
+  margin: 255px auto 0 auto;
   justify-content: center;
   z-index: 1;
   position: relative;
-  box-sizing: border-box;
-  padding: 0 69px;
-}
-
-@media screen and (max-width: 1279px) {
-  .cover__title {
-    margin-top: 211px;
-    padding: 0 75px;
-  }
-}
-
-@media screen and (max-width: 1023px) {
-  .cover__title {
-    margin-top: 173px;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .cover__title {
-    font-size: 2rem;
-    line-height: 1.1;
-    margin-top: 104px;
-    padding: 0 46px;
-  }
 }
 
 @media screen and (max-width: 320px) {
   .cover__title {
-    margin-top: 40px;
-    padding: 0 44px;
+    font-size: 2rem;
+    line-height: 1.1;
+    margin-top: 64px;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .cover__title {
+    font-size: 2rem;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 424px) {
+  .cover__title {
+    font-size: 2rem;
+    line-height: 1.1;
   }
 }
