--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -6,8 +6,6 @@
   flex-direction: column;
   justify-content: center;
   margin: 91px auto 0 auto;
-  background-repeat: no-repeat;
-  background-size: cover;
   width: calc(100% - 256px);
   height: auto;
   background-image: url(../../foto/cover.jpg);
@@ -33,12 +31,6 @@
   opacity: 0.8;
 }
 
-@media screen and (max-width: 1280px) {
-  .cover {
-    width: calc(100% - 96px);
-  }
-}
-
 @media screen and (max-width: 320px) {
   .cover {
     width: 100%;
@@ -60,12 +52,17 @@
 @media screen and (min-width: 425px) and (max-width: 768px) {
   .cover {
     width: 100%;
-    margin-top: 102px;
   }
 }
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {
   .cover {
     width: 100%;
+  }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1280) {
+  .cover {
+    width: calc(100% - 96px);
   }
 }
