--- a/blocks/footer/__list/__link/footer__link.css
+++ b/blocks/footer/__list/__link/footer__link.css
@@ -3,13 +3,13 @@ li {
 }
 
 .footer__link {
-  font-family: "Inter", Arial, sans-serif;
+  font-family: Inter;
   font-style: normal;
   font-weight: normal;
   font-size: 1.5rem;
   line-height: 1.7;
   color: #ffffff;
-  text-decoration: none;
+
   align-self: center;
   margin-right: 18px;
 }
@@ -18,10 +18,11 @@ li {
   margin: 0px;
 }
 
+
 @media screen and (max-width: 320px) {
-  .footer__link {
+  .footer__text-copyright {
     text-align: left;
-    margin-left: 0;
+margin-left: 0;
   }
 }
 
@@ -35,7 +36,7 @@ li {
 @media screen and (min-width: 376px) and (max-width: 424px) {
   .footer__link {
     text-align: left;
-    margin-left: 0;
+margin-left: 0;
   }
 }
 
