--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -11,19 +11,18 @@
   align-self: center;
 }
 
+
 @media screen and (max-width: 320px) {
   .footer {
     flex-direction: column-reverse;
     margin-left: 16px;
-    margin-top: 33px;
   }
 }
 
 @media screen and (min-width: 321px) and (max-width: 375px) {
   .footer {
-    flex-direction: column-reverse;
-    margin-left: 16px;
-    margin-top: 64px;
+  flex-direction: column-reverse;
+  margin-left: 16px;
   }
 }
 
@@ -31,14 +30,12 @@
   .footer {
     flex-direction: column-reverse;
     margin-left: 16px;
-    margin-top: 64px;
   }
 }
 
 @media screen and (min-width: 501px) and (max-width: 768px) {
   .footer {
     width: calc(100% - 46px);
-    margin-top: 92px;
   }
 }
 
@@ -48,7 +45,7 @@
   }
 }
 
-@media screen and (min-width: 1025px) and (max-width: 1280px) {
+@media screen and (min-width: 1025px) and (max-width: 1280) {
   .footer {
     width: calc(100% - 96px);
   }
