--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,10 +1,4 @@
-.header__iogo {
-  max-width: 177px;
+.header__logo {
+  width: 14%;
   height: auto;
-}
-
-@media screen and (max-width: 375px) {
-  .header__iogo {
-    max-width: 142px;
-  }
 }
