--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,8 +2,8 @@
 @import url("__lang/header__lang.css");
 @import url("__langs/header__langs.css");
 .header {
-  width: calc(100% - 256px);
-
+  width: 82%;
+  margin-top: 30px;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -11,20 +11,41 @@
   box-sizing: border-box;
 }
 
-@media screen and (max-width: 1280px) {
-  .header {
-    width: calc(100% - 96px);
-  }
-}
-
-@media screen and (max-width: 1023px) {
-  .header {
-    width: calc(100% - 48px);
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .header {
+@media screen and (max-width: 320px) {
+  .header{
     width: calc(100% - 32px);
+    margin-top: 16px;
   }
+  
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  .header{
+    width: calc(100% - 32px);
+    margin-top: 16px;
+  }
+  
+}
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .header{
+    width: calc(100% - 48px);
+    margin-top: 30px;
+  }
+  
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .header{
+    width: calc(100% - 96px);
+    margin-top: 30px;
+  }
+  
+}
+
+@media screen and (min-width: 1025px) {
+  .header{
+    width: calc(100% - 96px);
+    margin-top: 30px;
+  }
+  
 }
