--- a/blocks/intro/__content-row/__text/intro__text.css
+++ b/blocks/intro/__content-row/__text/intro__text.css
@@ -1,12 +1,8 @@
-.intro__text {
-  max-width: 683px;
-  font-size: 0.875rem;
-  line-height: 1.7;
-  margin-right: 18px;
+.intro__text{
+    max-width: 683px;
+    
+    font-size: 14px;
+    line-height: 24px;
+    margin-right: 18px;
 }
 
-@media screen and (max-width: 1280px) {
-  .intro__text {
-    font-size: 1rem;
-  }
-}
