--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,38 +3,31 @@
 @import url("__content-row/intro__content-row.css");
 @import url("__list/intro__list.css");
 @import url("__list/intro__list-text.css");
-@import url("__content-row/__text/intro__text.css");
+@import url("__text/intro__text.css");
 
 .intro {
   display: flex;
   flex-direction: column;
   align-content: flex-start;
-  width: calc(100% - 757px);
+  max-width: 984px;
+  width: 68%;
   margin-top: 80px;
-  margin-left: 228px;
+  margin-left: auto;
   margin-right: auto;
   margin-bottom: 0;
 }
 
-@media screen and (max-width: 1280px) {
+
+@media screen and (max-width: 320px) {
   .intro {
-    width: calc(100% - 597px);
-    margin-left: 148px;
-    margin-top: 95px;
+    width: calc(100% - 32px);
+    height: auto;
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 321px) and (max-width: 375px) {
   .intro {
-    width: calc(100% - 96px);
-    margin-left: auto;
-    margin-top: 95px;
-  }
-}
-
-@media screen and (min-width: 425px) and (max-width: 767px) {
-  .intro {
-    width: calc(100% - 48px);
+    width: calc(100% - 32px);
     height: auto;
   }
 }
@@ -43,28 +36,24 @@
   .intro {
     width: calc(100% - 32px);
     height: auto;
-    margin-top: 64px;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 425px) and (max-width: 768px) {
   .intro {
-    width: calc(100% - 32px);
+    width: calc(100% - 48px);
     height: auto;
-    margin-top: 90px;
   }
 }
 
-@media screen and (min-width: 321px) and (max-width: 375px) {
+@media screen and (min-width: 769px) and (max-width: 1024px) {
   .intro {
-    width: calc(100% - 32px);
-    height: auto;
-    margin-top: 64px;
+    width: calc(100% - 96px);
   }
 }
 
-/*@media screen and (min-width: 1025px) {
+@media screen and (min-width: 1025px) {
   .intro {
     width: calc(100% - 296px);
   }
-}*/
+}
