--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -7,25 +7,11 @@
   box-sizing: border-box;
 }
 
-@media screen and (max-width: 1279px) {
-  .lead__title {
-    width: calc(100% - 96px);
-  }
-}
-
-@media screen and (max-width: 1023px) {
-  .lead__title {
-    width: calc(100% - 48px);
-  }
-}
-
 @media screen and (max-width: 320px) {
   .lead__title {
     width: calc(100% - 32px);
     font-size: 2.5rem;
     line-height: 1.1;
-    margin-bottom: 14px;
-    margin-top: 0;
   }
 }
 
@@ -34,8 +20,6 @@
     width: calc(100% - 32px);
     font-size: 2.5rem;
     line-height: 1.1;
-    margin-bottom: 8px;
-    margin-top: 0;
   }
 }
 
@@ -59,5 +43,17 @@
     width: calc(100% - 48px);
     font-size: 6rem;
     line-height: 1;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .lead__title {
+    width: calc(100% - 96px);
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .lead__title {
+    width: calc(100% - 202px);
   }
 }
