--- a/blocks/photo-grid/photo.css
+++ b/blocks/photo-grid/photo.css
@@ -2,9 +2,9 @@
 
 .photo {
   display: grid;
-  width: calc(100% - 256px);
+  width: 82%;
   object-fit: cover;
-  grid-template-columns: repeat(4, minmax(280px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   grid-template-rows: repeat(3, 1fr);
   grid-column-gap: 16px;
   grid-row-gap: 16px;
@@ -14,48 +14,42 @@
   margin-bottom: 20px;
 }
 
-@media screen and (min-width: 1280px) and (max-width: 1439px) {
+@media screen and (max-width: 320px) {
   .photo {
-    width: calc(100% - 96px);
-  }
-}
-
-@media screen and (max-width: 1279px) {
-  .photo {
-    width: calc(100% - 96px);
-    grid-template-columns: repeat(3, minmax(100px, 400px));
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  .photo {
-    width: calc(100% - 96px);
-    grid-template-columns: repeat(3, minmax(100px, 400px));
-    margin-top: 74px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .photo {
-    grid-template-columns: repeat(2, minmax(100px, 460px));
-    width: calc(100% - 48px);
-    height: auto;
-    justify-content: center;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .photo {
-    grid-template-columns: repeat(1, minmax(100px, 460px));
     width: calc(100% - 32px);
     height: auto;
-    justify-content: center;
   }
 }
 
-@media screen and (max-width: 374px) {
+@media screen and (min-width: 321px) and (max-width: 375px) {
   .photo {
-    grid-row-gap: 8px;
-    margin-top: 100px;
+    width: calc(100% - 32px);
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 424px) {
+  .photo {
+    width: calc(100% - 32px);
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .photo {
+    width: calc(100% - 48px);
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .photo {
+    width: calc(100% - 96px);
+  }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1439px) {
+  .photo {
+    width: calc(100% - 96px);
   }
 }
