--- a/blocks/places/__place/paragraph/__paragraph-region/place__paragraph-region.css
+++ b/blocks/places/__place/paragraph/__paragraph-region/place__paragraph-region.css
@@ -4,16 +4,10 @@
   grid-column: 2 / 3;
   grid-row: 2 / 3;
   margin: 36px auto 0 auto;
+  overflow: hidden;
   object-fit: cover;
 }
 
 .place__paragraph-region:first-child {
   margin-top: 0;
-}
-
-@media screen and (max-width: 1023px) {
-  .place__paragraph-region {
-    font-size: 1rem;
-    padding: 0 1rem;
-  }
 }
