--- a/blocks/places/__place/paragraph/paragraph.css
+++ b/blocks/places/__place/paragraph/paragraph.css
@@ -1,45 +1,49 @@
-.place__paragraph {
+@import url("__paragraph-spit/place__paragraph-spit.css");
+@import url("__paragraph-region/place__paragraph-region.css");
+
+.paragraph {
+  overflow: hidden;
   max-width: 484px;
   display: flex;
   flex-direction: column;
 }
 
 @media screen and (max-width: 320px) {
-  .place__paragraph {
+  .paragraph {
     max-width: 288px;
     height: auto;
   }
 }
 
 @media screen and (min-width: 321px) and (max-width: 375px) {
-  .place__paragraph {
+  .paragraph {
     max-width: 343px;
     height: auto;
   }
 }
 
 @media screen and (min-width: 376px) and (max-width: 424px) {
-  .place__paragraph {
+  .paragraph {
     max-width: 343px;
     height: auto;
   }
 }
 
 @media screen and (min-width: 425px) and (max-width: 768px) {
-  .place__paragraph {
+  .paragraph {
     width: 100%;
     height: auto;
   }
 }
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {
-  .place__paragraph {
+  .paragraph {
     width: 100%;
   }
 }
 
 @media screen and (min-width: 1025px) and (max-width: 1280) {
-  .place__paragraph {
+  .paragraph {
     width: 100%;
   }
 }
