--- a/blocks/subtitle/subtitle.css
+++ b/blocks/subtitle/subtitle.css
@@ -1,6 +1,6 @@
 .subtitle {
   display: flex;
-  font-family: "Inter", Arial, sans-serif;
+  font-family: Inter;
   font-style: normal;
   font-weight: normal;
   color: #ffffff;
