--- a/pages/page.css
+++ b/pages/page.css
@@ -1,5 +1,4 @@
 @import url("../vendor/normalize.css");
-@import url("../blocks/page/page.css");
 @import url("../blocks/header/header.css");
 @import url("../blocks/lead/lead.css");
 @import url("../blocks/link/link.css");
@@ -10,7 +9,6 @@
 @import url("../vendor/font/font.css");
 @import url("../blocks/photo-grid/photo.css");
 @import url("../blocks/places/places.css");
-@import url("../blocks/place/place.css");
 @import url("../blocks/video/video.css");
 @import url("../blocks/block/block.css");
 @import url("../blocks/additional/additional.css");
@@ -22,6 +20,24 @@
 @import url("../blocks/container/container.css");
 @import url("../blocks/description/description.css");
 
-body {
+body{
   background-color: #2a2c2f;
 }
+
+.page {
+    display: flex;
+  flex-direction: column;
+  align-content: center;
+  padding: 0;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 1440px;
+  min-width: 320px;
+  box-sizing: border-box;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+-ms-text-size-adjust: 100%;
+-moz-text-size-adjust: 100%;
+}
+
+
